kubernetes/drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-app
  labels:
    app: drupal
spec:
  replicas: 2 # Adjust as needed for load balancing
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: drupal-site:latest # This will be replaced by your Jenkins pipeline with the actual image from your registry
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: drupal-files-storage
          mountPath: /var/www/html/web/sites/default/files
      volumes:
      - name: drupal-files-storage
        persistentVolumeClaim:
          claimName: drupal-files-pvc # Name of the PVC for Drupal files
