kubernetes/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  labels:
    app: drupal
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 9000 # Service port
      targetPort: 9000 # Container port
  type: ClusterIP
