kubernetes/drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  labels:
    app: drupal
spec:
  rules:
  - host: drupal.yourcompany.com # IMPORTANT: Change this to your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - drupal.yourcompany.com
  #   secretName: drupal-tls-secret # Name of the Kubernetes Secret containing your TLS certificate
